# mp_os

./: .gitignore  CMakeLists.txt  README.md
allocator/allocator/include/: allocator.h
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_boundary_tags/tests/: allocator_boundary_tags_tests_logs_false_positive_test_1.txt  allocator_boundary_tags_tests_logs_positive_test_plain_usage.txt  mp_os_allctr_allctr_bndr_tgs_tests-1.0
allocator/allocator_buddies_system/include/: allocator_buddies_system.h
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_buddies_system/tests/: allocator_buddies_system_positiveTests_test1.txt  mp_os_allctr_allctr_bdds_sstm_tests-1.0
allocator/allocator_global_heap/: CMakeLists.txt
allocator/allocator_global_heap/include/: allocator_global_heap.h
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_global_heap/tests/: gh_alc_test1_logs.txt  mp_os_allctr_allctr_glbl_hp_tests-1.0
allocator/allocator_sorted_list/include/: allocator_sorted_list.h
allocator/allocator_sorted_list/src/: allocator_sorted_list.cpp
allocator/allocator_sorted_list/tests/: mp_os_allctr_allctr_srtd_lst_tests-1.0
arithmetic/big_integer/include/: big_integer.h
arithmetic/big_integer/src/: big_integer.cpp
arithmetic/big_integer/tests/Karatsuba_multiplication/: mp_os_arthmtc_bg_intgr_tests_Karatsuba_mltplctn-1.0
arithmetic/big_integer/tests/big_integer/: big_integer_tests.cpp  mp_os_arthmtc_bg_intgr_tests_bgnt-1.0
arithmetic/big_integer/tests/trivial_division/: mp_os_arthmtc_bg_intgr_tests_trvl_dvsn-1.0
arithmetic/big_integer/tests/trivial_multiplication/: mp_os_arthmtc_bg_intgr_tests_trvl_mltplctn-1.0
arithmetic/continued_fraction/src/: continued_fraction.cpp
arithmetic/continued_fraction/tests/: CMakeLists.txt  continued_fraction_tests.cpp  mp_os_arthmtc_cntnd_frctn_tests  mp_os_arthmtc_cntnd_frctn_tests-1.0
arithmetic/fraction/include/: fraction.h
arithmetic/fraction/src/: fraction.cpp
arithmetic/fraction/tests/: CMakeLists.txt  fraction_tests.cpp  mp_os_arthmtc_frctn_tests  mp_os_arthmtc_frctn_tests-1.0
associative_container/hash_table/include/: hash_table.h
associative_container/hash_table/tests/: hash_table_tests.cpp
associative_container/include/: associative_container.h
associative_container/search_tree/: CMakeLists.txt
associative_container/search_tree/binary_search_tree/include/: binary_search_tree.h
associative_container/search_tree/include/: search_tree.h
common/include/: synonym_replacer.h
common/src/: synonym_replacer.cpp
course_work/: CMakeLists.txt  client.cpp  in.txt  main.cpp  mp_os_course_work_client  mp_os_course_work_client-1.0  mp_os_course_work_main  mp_os_course_work_main-1.0  mp_os_course_work_server  mp_os_course_work_server-1.0  out.txt  pool_scheme2_collection.txt  pool_scheme2_collection2.txt  pool_scheme_collection.txt  pool_scheme_collection2.txt  server.cpp  test.txt
course_work/include/: command_interpreter.h  common.h  database.h  date_time.h  tcp_client.h  tcp_storage_server.h
course_work/src/: command_interpreter.cpp  common.cpp  database.cpp  date_time.cpp  tcp_client.cpp  tcp_storage_server.cpp
logger/client_logger/include/: client_logger.h  client_logger_builder.h
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/client_logger/tests/: client_logger_tests.cpp  file7.txt  file_5.txt  mp_os_lggr_clnt_lggr_tests-1.0
logger/logger/: CMakeLists.txt
logger/logger/include/: automatic_logger.h  logger.h
logger/logger/src/: automatic_logger.cpp
logger/server_logger/include/: server_logger.h  server_logger_builder.h
logger/server_logger/src/: server_logger.cpp  server_logger_builder.cpp
logger/server_logger/tests/: mp_os_lggr_srvr_lggr_tests-1.0  server_logger_tests.cpp
(+13 files in other folders)
